[CORA-1365][KAP Extra]
